--- a/src/templates/PageBody/PageBody.module.scss
+++ b/src/templates/PageBody/PageBody.module.scss
@@ -8,4 +8,6 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0.04rem;
+  color: var(--body-primary);
+  background-color: var(--body-background-primary);
 }
