--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -5,7 +5,7 @@
   --sm-font: 1rem; // 16px
   --md-font: 1.875rem; // 30px
   --lg-font: 2.5rem; // 40px
-  --xl-font: 3.9375rem; // 63px
+  --xl-font: 3.3rem; // 57.6px
 }
 
 h1 {
